# finance-tracker-backend

./: requirements.txt
backend/: alembic.ini  app.py  pyproject.toml  requirements.txt
backend/instance/: finance_tracker.db
backend/migrations/versions/: 0feb1b5975fc_initial_migration.py
