[project]
name = "poetry add flask"
version = "poetry add psycopg2"
description = "poetry install"
authors = [
    {name = "poetry shell"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
